[package]
name = "tui-do"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
crossterm = "0.26.1"
ratatui = "0.22.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.29.1", features = [ "full" ] }
uuid = { version = "1.4.1", features = ["v4"] }